--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -6,13 +6,6 @@ layout: Stylesheet
 /*@import "/assets/css/theme.css"; leaving out for now, will tinker w/color switcher later...*/
 /* Containers: Body, Container, Box, Main, Header, Content */
 
-@font-face {
-  font-family: 'Compact';
-  src: url('../fonts/AltissimaCompact009GX.woff2') format('woff2');
-  display: swap;
-  font-weight: 400;
-  font-style: normal;
-}
 
 @font-face {
   font-family: 'Signifier';
@@ -1496,7 +1489,7 @@ summary {
     text-decoration: none;
     font-weight: normal;
     font-size: 1.7rem;
-    font-family: "Compact";
+    font-family: var(--font-family-sans);
 }
 
 
