--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -119,7 +119,7 @@ layout: Stylesheet
   font-weight: 700;
   font-style: normal;
 }
-/*
+
 
 @font-face {
    font-family: 'pitch sans';
@@ -260,9 +260,9 @@ layout: Stylesheet
    font-display: swap;
 }
 
-*/
 
-/*
+
+
 
 @font-face {
    font-family: 'Heldane';
@@ -326,7 +326,7 @@ layout: Stylesheet
    font-weight: 400;
    font-style: normal;
    font-display: swap;
-} */
+} 
 
 /*light/dark mode colors*/
 
