--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1585,6 +1585,7 @@ summary {
     font-weight: normal;
     font-size: calc(70px + (160 - 70) * ( 100vw - 300px) / (1070 - 300));
     font-family: "Staff";
+    box-shadow: none;
 }
 
 .avatar {
@@ -2694,6 +2695,7 @@ position: absolute;
     -webkit-box-pack: justify;
     /*-ms-flex-pack: justify;*/
     justify-content: space-between;
+    font-family: var(--font-family-sans);
 }
 
 .article-meta__item-label {
@@ -2719,7 +2721,7 @@ position: absolute;
 
 .content a {
     color: var(--c-text-link);
-    text-decoration: underline;
+    text-decoration: none;
     /*background-image: linear-gradient(0deg,var(--lime) 40%,transparent 0);*/
     font-weight: var(--font-weight-semibold);
 }
