--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -188,8 +188,8 @@
         <script src="/assets/js/Search.js"></script>
         <script src="/scripts/theme-switcher.js"></script>
         {%- endif -%}
-        <button onclick="modeSwitcher()">
-            <img src="../assets/img/sun.svg" id="theme-toggle"</img>
+        <button id="theme-toggle" onclick="modeSwitcher()">
+            <img src="../assets/img/sun.svg"</img>
         </button>
     </div>
     <div class="searchbar search-container">
