adding id attribute to toggle button

--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -189,7 +189,7 @@
         <script src="/scripts/theme-switcher.js"></script>
         {%- endif -%}
         <button id="theme-toggle" onclick="modeSwitcher()">
-            <img src="../assets/img/sun.svg"</img>
+            <img src="../assets/img/sun.svg" id="theme-toggle-img"</img>
         </button>
     </div>
     <div class="searchbar search-container">
