--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1830,18 +1830,19 @@ summary {
     transition: transform .5s ease 0s,visibility 0s linear .5s; */
 	
     #theme-toggle {
-    border: 2px solid var(--c-text);
-    font-size: 15px;
     opacity: 1;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: var(--c-text);
-    color: var(--c-topper-split-bg);
     cursor: pointer;
     box-shadow: -10px 10px 20px 0 var(--c-border-light);
     z-index: 75;
     transition: transform .5s ease 0s,visibility 0s linear .5s;
+    border-radius: 50%;
+    border: transparent;
+    width: 50px;
+    height: 50px;
 }
 }
 
