--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1616,8 +1616,9 @@ summary {
     text-decoration: none;
     font-weight: normal;
     font-size: calc(70px + (160 - 70) * ( 100vw - 300px) / (1070 - 300));
-    font-family: "Staff";
+    font-family: "ogg";
     box-shadow: none;
+    line-height: .9;
 }
 
 .avatar {
