a to div for theme-toggle

--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -188,9 +188,9 @@
         <script src="/assets/js/Search.js"></script>
         <script src="/scripts/theme-switcher.js"></script>
         {%- endif -%}
-        <a  class="menu-item" onclick="modeSwitcher()">
+        <div class="menu-item" onclick="modeSwitcher()">
             <p class="menu-item-text"></p>
-        </a>
+        </div>
     </div>
     <div class="searchbar search-container">
             {%- if site.preferences.search.shortcut_hint.enabled -%}
