--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -188,9 +188,7 @@
         <script src="/assets/js/Search.js"></script>
         <script src="/scripts/theme-switcher.js"></script>
         {%- endif -%}
-        <div class="menu-item" onclick="modeSwitcher()">
-            <p class="menu-item-text"></p>
-        </div>
+        <button id="theme-toggle" onclick="modeSwitcher()"></button>
     </div>
     <div class="searchbar search-container">
             {%- if site.preferences.search.shortcut_hint.enabled -%}
