--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -625,7 +625,7 @@ html[data-theme="dark"] {
   --line-height-snug: 1.375;
 
   /* Font family */
-  --font-family-serif: "Ogg", Iowan Old Style, Apple Garamond, Baskerville,
+  --font-family-serif: "Suisse", Iowan Old Style, Apple Garamond, Baskerville,
     Times New Roman, Droid Serif, Times, Source Serif Pro, serif,
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
   --font-family-mono: "SuisseMono", 'SFMono-Regular', 'Menlo', monospace;
