● Light Mode in the button field

--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -188,7 +188,7 @@
         <script src="/assets/js/Search.js"></script>
         <script src="/scripts/theme-switcher.js"></script>
         {%- endif -%}
-        <button id="theme-toggle" onclick="modeSwitcher()"></button>
+        <button id="theme-toggle" onclick="modeSwitcher()">● Light Mode</button>
     </div>
     <div class="searchbar search-container">
             {%- if site.preferences.search.shortcut_hint.enabled -%}
