--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -187,7 +187,7 @@
         <script type="text/javascript" src="/assets/js/vendor/lunr.min.js"></script>
         <script src="/assets/js/Search.js"></script>
         {%- endif -%}
-        <a href="{{page.url}}" id="theme-toggle" onclick="modeSwitcher()" style="cursor: pointer;"></a>
+        <div id="theme-toggle" onclick="modeSwitcher()" style="cursor: pointer;"></div>
     </div>
     <div class="searchbar search-container">
             {%- if site.preferences.search.shortcut_hint.enabled -%}
