--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1757,10 +1757,10 @@ summary {
     justify-content: space-evenly;
     width: 100%;
     float: left;
-    border-top: 1px solid var(--c-border);
-    border-bottom: 1px solid var(--c-border);
-    padding: 15px 0;
-    margin-bottom: 1.3rem;
+    /* border-top: 1px solid var(--c-border); */
+    /* border-bottom: 1px solid var(--c-border); */
+    /* padding: 15px 0; */
+    /* margin-bottom: 1.3rem;
 }
 
 .menu-right {
@@ -2314,15 +2314,14 @@ a.button-block {
     padding-left: 50px;
     box-sizing: border-box;
     width: 100%;
-    height: 40px;
+    height: 33px;
     border: 1px solid var(--c-border);
     font-family: var(--font-family-serif) !important;
     color: var(--c-text);
     font-size: var(--font-size-medium);
     background-color: var(--c-card-bg-light);
-    /*margin-top: 1em;*/
     padding: 0 1.25em;
-    /*margin-left: 25px;*/
+    /* margin-left: 16px;
 }
 
 ::placeholder {
