--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1760,7 +1760,7 @@ summary {
     /* border-top: 1px solid var(--c-border); */
     /* border-bottom: 1px solid var(--c-border); */
     /* padding: 15px 0; */
-    /* margin-bottom: 1.3rem;
+    /* margin-bottom: 1.3rem; */
 }
 
 .menu-right {
