--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2310,18 +2310,18 @@ a.button-block {
 
 
 .searchbar input[type="text"] {
-    position: relative;
     padding-left: 50px;
     box-sizing: border-box;
     width: 100%;
-    height: 33px;
+    height: 40px;
     border: 1px solid var(--c-border);
     font-family: var(--font-family-serif) !important;
     color: var(--c-text);
     font-size: var(--font-size-medium);
     background-color: var(--c-card-bg-light);
+    /*margin-top: 1em;*/
     padding: 0 1.25em;
-    /* margin-left: 16px;
+    /*margin-left: 25px;*/
 }
 
 ::placeholder {
