--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2331,7 +2331,7 @@ a.button-block {
     font-family: var(--font-family-mono) !important;
     color: var(--c-text);
     font-size: var(--font-size-small);
-    background-color: var(--c-bg);
+    background-color: var(--c-card-bg-light);
     /*margin-top: 1em;*/
     padding: 0 1em;
     /*margin-left: 25px;*/
