--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2327,7 +2327,7 @@ a.button-block {
     box-sizing: border-box;
     width: 100%;
     height: 40px;
-    /*border: 1px solid var(--c-border);*/
+    border: 1px solid transparent;
     font-family: var(--font-family-mono) !important;
     color: var(--c-text);
     font-size: var(--font-size-small);
