feed spacing for title

--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2627,10 +2627,11 @@ a.button-block {
 .feed-title-excerpt-block {
     width: 100%;
     cursor: pointer;
-    border: 1px solid var(--c-card-border-light);
+    /*border: 1px solid var(--c-card-border-light);*/
     /*background-color: var(--c-gradient-fade);*/
     margin: 2rem 0;
     padding-bottom: 1rem;
+	margin-bottom: 7px;
     /*border-radius: 1rem;*/
 }
 
