--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -782,13 +782,13 @@ main {
 	font-variant-ligatures: common-ligatures;
 	font-variant-numeric: oldstyle-nums;
 	font-feature-settings: pnum;
-	font-family: var(--font-family-sans);
+	font-family: var(--font-family-serif);
 	font-weight: 400;
 	line-height: 1;
-	margin: 36px 0 8px;
+	margin: 80px 0 8px;
 	color: var(--c-text-strong);
   	/* border-bottom: 1px solid var(--c-border) !important;*/
-  	padding-bottom: 1.3rem;
+  	/*padding-bottom: 1.3rem;*/
 	letter-spacing: 0.01em;
  	font-variant-ligatures: discretionary-ligatures;
 	
@@ -1019,7 +1019,7 @@ a, p, ul, li, ol, table, span, blockquote {
 
 p, li {
 	font-size: 18px;
-	font-family: var(--font-family-serif);
+	font-family: var(--font-family-sans);
 	font-size: 18px;
 	line-height: 1.4;
 	font-weight: 300;
@@ -1030,7 +1030,7 @@ p, li {
 p b,
 p strong, li strong {
 	font-weight: 500;
-	FONT-FAMILY: var(--font-family-serif);
+	FONT-FAMILY: var(--font-family-sans);
 }
 
 p em,
@@ -3099,6 +3099,7 @@ label.srs-toggle {
     color: var(--secondary-text-color);
     padding-top: 20px;
     padding-left: 20px
+	    font-family: var(--font-family-mono);
 }
 
 .related-wrapper {
