site heading underline

--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1722,6 +1722,10 @@ summary {
 	    box-shadow: none;
 }
 
+.site-heading-ltr a:focus {
+	    box-shadow: none;
+}
+
 .avatar {
     position: absolute;
     top: 50px;
