--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -7,6 +7,14 @@ layout: Stylesheet
 /* Containers: Body, Container, Box, Main, Header, Content */
 
 @font-face {
+  font-family: 'Dia';
+  src: url('../fonts/DiaBlack.woff') format('woff');
+  display: swap;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'Heldane-Text';
   src: url('../fonts/HeldaneTextWeb-Regular.woff2') format('woff2');
   display: swap;
