--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -726,7 +726,7 @@ html[data-theme="dark"] {
   --font-family-serif: "Ogg", Iowan Old Style, Apple Garamond, Baskerville,
     Times New Roman, Droid Serif, Times, Source Serif Pro, serif,
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-  --font-family-mono: "Relative", 'SFMono-Regular', 'Menlo', monospace;
+  --font-family-mono: "Dia", 'SFMono-Regular', 'Menlo', monospace;
   --font-family-sans: "OggText", -apple-system, BlinkMacSystemFont,
     avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto,
     noto, arial, sans-serif;
