--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1753,7 +1753,7 @@ border-bottom: 1px solid var(--c-card-border);
     font-family: var(--font-family-serif);
     box-shadow: none;
     line-height: .9;
-    letter-spacing: -0.02em;
+    color: var(--c-accent);
 }
 
 @media(min-width: 300px)and (max-width: 1069px) {
@@ -1925,6 +1925,7 @@ border-bottom: 1px solid var(--c-card-border);
     font-family: var(--font-family-mono);
     color: var(--c-text-muted);
     margin-bottom: 0;
+    text-transform: uppercase;
 }
 
 .menu-item-text:hover {
@@ -2038,6 +2039,7 @@ border-bottom: 1px solid var(--c-card-border);
     font-family: var(--font-family-mono);
     color: var(--c-text-muted);
     margin-bottom: 0;
+    text-transform: uppercase;
 }
 
 #theme-toggle-img {
