--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -112,6 +112,15 @@ layout: Stylesheet
   font-style: normal;
 }
 
+
+@font-face {
+  font-family: 'Ogg';
+  src: url('../fonts/Ogg-Medium.woff') format('woff');
+  display: swap;
+  font-weight: 500;
+  font-style: normal;
+}
+
 @font-face {
   font-family: 'Ogg';
   src: url('../fonts/Ogg-Bold.woff') format('woff');
