--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1757,7 +1757,7 @@ border-bottom: 1px solid var(--c-card-border);
 
 .site-heading-ltr a {
     text-decoration: none;
-    font-weight: normal;
+    font-weight: 500;
     font-size: 70px;
     font-family: var(--font-family-serif);
     box-shadow: none;
@@ -1892,7 +1892,7 @@ border-bottom: 1px solid var(--c-card-border);
     /*border-top: 1px solid var(--c-border); 
     border-bottom: 1px solid var(--c-border); */
     padding: -1px 0; 
-    margin-bottom: 0px; 
+    margin: 15px 0px;
 }
 
 .menu-right {
